<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tokopaerbe.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.tokopaerbe.home.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store"/>

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.example.tokopaerbe.home.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.tokopaerbe.home.transaction.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction" />

</navigation>