<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/modalBottomSheet"
    android:layout_height="match_parent"
    tools:context=".home.store.ModalBottomSheetFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bold"
        android:text="@string/Filter"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resetButtonError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibold"
        android:text="@string/urutkan"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipgroup1"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/ulasan"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/penjualan"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:layout_height="wrap_content"
            android:text="@string/hargaTerendah"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/hargaTertinggi"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibold"
        android:text="@string/kategori"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipgroup1" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipgroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/apple"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/asus"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/dell"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Input"
            android:text="@string/lenovo"
            app:closeIconVisible="false"
            app:checkedIconVisible="false"
            android:fontFamily="@font/medium"
            android:textSize="14sp"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibold"
        android:text="@string/harga"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipgroup2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldterendah"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:hint="@string/terendah"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTerendah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldtertinggi"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/tertinggi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textFieldterendah"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTertinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:id="@+id/tampilkanproduk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="43dp"
        android:text="@string/tampilkanProduk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldterendah"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>