<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="?android:attr/windowBackground"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/shopping_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_shopping_bag_28_black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/medium"
            android:text="@string/belanja"
            android:textSize="10sp"
            card_view:layout_constraintStart_toEndOf="@+id/shopping_bag"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tanggalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/tanggalValue"
            android:textSize="10sp"
            card_view:layout_constraintStart_toEndOf="@id/shopping_bag"
            card_view:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selesai"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/primaryColor"
            android:background="@color/bgSelesai"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tanggalValue"
            card_view:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/materialDivider2"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/medium"
            android:maxLines="1"
            android:text="@string/spec"
            android:textSize="14sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

        <TextView
            android:id="@+id/totalBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalBarang"
            android:layout_marginStart="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/item_image"
            card_view:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/totalBelanja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalBelanja"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="8dp"
            card_view:layout_constraintTop_toBottomOf="@id/item_image"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/totalHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:fontFamily="@font/semibold"
            card_view:layout_constraintTop_toBottomOf="@id/totalBelanja"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/buttonUlas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/ulas"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>